# config/routes.rb
@@ -29,6 +29,9 @@ Rails.application.routes.draw do
     get 'newest', to: 'api/contributions#newest', as: 'newest_api'
     get 'ask', to: 'api/contributions#ask', as: 'ask_api'
     get 'contributions/users/:id', to: 'api/contributions#showcontributionsofuser', as: 'contributionsofuser_api'
+    get 'contributions/:id', to: 'api/contributions#show', as: 'show_contribution_api'
+    
+    get 'users/:id', to: 'api/users#show', as: 'show_user_api'
   end
 
   get 'newest', to: 'contributions#newest', as: 'newest'
