# swagger/v1/swagger.yaml
@@ -42,6 +42,37 @@ paths:
                 items:
                   $ref: '#/components/schemas/Contribution'
                   
+  /contributions/{id}:
+    get:
+      tags:
+        - contributions
+      summary: Return a contribution from an id
+      operationId: showContribution
+      parameters:
+        - name: id
+          in: path
+          description: ID of the contribution
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        200:
+          description: Succesful request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Contribution'
+        404:
+          description: 'Error: Not Found'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResult'
+              examples:
+                errorExample:
+                  $ref: '#/components/examples/error404C'
+                  
   /contributions/users/{id}:
     get:
       tags:
@@ -75,6 +106,38 @@ paths:
               examples:
                 errorExample:
                   $ref: '#/components/examples/error404U'
+                
+  /users/{id}:
+    get:
+      tags:
+        - users
+      summary: Return an user from an id
+      operationId: showUser
+      parameters:
+        - name: id
+          in: path
+          description: ID of the user
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        200:
+          description: Succesfull request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        404:
+          description: 'Error: Not Found'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResult'
+              examples:
+                errorExample:
+                  $ref: '#/components/examples/error404U'
+            
           
 components:
   schemas:
@@ -288,6 +351,11 @@ components:
         status: 404
         error: "Not Found"
         message: "No User with that ID"
+    error404C:
+      value:
+        status: 404
+        error: "Not Found"
+        message: "No Contribution with that ID"
 securitySchemes:
   ApiKeyAuth:
     type: apiKey
